/*
Copyright Â© 2021 Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package nocloud.registry.namespaces;

message CreateRequest {
    string title = 1;
}

message CreateResponse {
    string uuid = 1;
}

message Namespace {
    string uuid = 1;
    string title = 2;
}

message JoinRequest {
    string namespace = 1;
    string account = 2;
    optional int32 access = 3; // Account access level to namespace
}

message JoinResponse {
    bool result = 1;
}

message LinkRequest {
    string namespace = 1;
    string account = 2;
    optional int32 access = 3; // Account access level to namespace
    optional string role = 4;
}

message LinkResponse {
    bool result = 1;
}

message ListRequest {
    optional int32 depth = 1; // Depth 
}

message ListResponse {
    repeated Namespace pool = 1;
}

message DeleteRequest {
    string uuid = 1;
}

message DeleteResponse {
    bool result = 1;
}
